2023-01-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to change symbols used for output of digit 10 and 11 in duodecimal numbers. Default digits are now A and B, instead of ↊ and ↋ (or X and E).

2023-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix reactivation of global object after deletion of conflicting object

2023-01-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use "help [OPTION]" to display description for a single set option, in qalc

2023-01-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* EUR has replaced HRK as currency of Croatia

2022-12-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use json exchange rate data from exchangerate.host, mycurrency.net, or floatrates.com (try in mentioned order), as secondary exchange rates source

2022-12-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix unit tests (ordering in output changed)

2022-12-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Check that output of command, in command() function, is a reasonably sane expression
	* Fix countTotalChildren() with count_function_as_one set to false

2022-12-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add m/s^3, m/s^4, m/s^5, and m/s^6 as derived units (improves automatic unit conversion)

2022-12-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix randuniform()
	* Fix dual approximation with random number functions

2022-12-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in qalc when set command option and value contains more than three words
	* Fix errornous calculation of arg(x^n) in some cases (when transformed to arg(x)*n without mod 2pi)

2022-12-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use standard form (sorting) for polynomials

2022-12-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow non-numerical arguments in atan2()

2022-12-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
