@@ -1935,7 +1935,7 @@
     <unit type="alias">
       <_title>Liter</_title>
       <_names>ar:L,a:l,aou:&#x2113;,liter,p:liters,litre,p:litres</_names>
-      <use_with_prefixes>true</use_with_prefixes>
+      <use_with_prefixes max="0">true</use_with_prefixes>
       <base>
         <unit>m</unit>
         <relation>0.001</relation>
